# JetCrab

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/: branch-protection.yml
.github/workflows/: ci.yml  coverage.yml  setup-branch-protection.yml
benches/: lexer_benchmarks.rs  parser_benchmarks.rs  performance_benchmarks.rs  simple_benchmark.rs  vm_benchmarks.rs
docs/: README.md  STRUCTURE_PROPOSAL.md  ecmascript_2024_implementation_status.md
docs/architecture/: README.md  crate-architecture.md  crate-consolidation-plan.md  engine-overview.md  ideal-new-project-structure.md
docs/checklists/: crates-master-checklist.md  jit-implementation-checklist.md  main-checklist.md  vm-checklist.md
docs/getting-started/: README.md  installation.md
docs/guides/: README.md  beginners-guide.md
docs/implementation/: README.md  crates-master-checklist.md  ecmascript-compliance-checklist.md  ecmascript-compliance.md  jit-implementation-checklist.md  main-checklist.md  vm-checklist.md
docs/tasks/: tokio-integration-task.md
examples/: basic_usage.rs  e2e_test.rs  ecmascript_2024_compliance.rs  lexer_test.rs  parser_test.rs  type_safe_handles.rs  vm_demo.rs  vm_test.rs
scripts/: dev.sh  pre-commit.sh
src/: lib.rs  test_utils.rs
src/api/: compiler.rs  engine.rs  error.rs  interpreter.rs  mod.rs
src/ast/: error.rs  mod.rs  node.rs  serialization.rs  visitor.rs
src/bytecode/: error.rs  generator.rs  mod.rs  optimizer.rs
src/lexer/: core.rs  error.rs  lexer.rs  mod.rs  token.rs
src/memory/: allocator.rs  collector.rs  error.rs  heap.rs  (+1 more)
(+112 files in other folders)
