[package]
name = "jetcrab"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["JetCrab Team"]
description = "A modern JavaScript engine written in Rust"
repository = "https://github.com/JetCrabCollab/JetCrab"
keywords = ["javascript", "engine", "vm", "compiler"]
categories = ["development-tools"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"
